k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-nextjs
  namespace: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app-nextjs
  template:
    metadata:
      labels:
        app: todo-app-nextjs
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: web
          image: ghcr.io/iamamanul/todo-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
