k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app-nextjs
  ports:
    - port: 80
      targetPort: 3000
